Fixed account view for the most part; account button not centered--completely non-essential but a time-killer...Flickr fields in proper order

--- a/app/styles/_account.scss
+++ b/app/styles/_account.scss
@@ -9,7 +9,7 @@ div.user-profile {
 
   position: absolute;
   top: $std-header-height;
-  @include outer-container;
+
   width: 100%;
   background: $white;
 
@@ -30,9 +30,10 @@ div.user-profile {
     }
 
   section#your-pets {
-    @include span-columns(12);
+    @include outer-container;
 
     h3 {
+
         text-align:center;
         clear:both;
         font-weight:300;
@@ -43,17 +44,21 @@ div.user-profile {
 
     button#add-pet {
       @include media($mobile-s) {
-        @include span-columns(4 of 12); @include shift(4 of 12);
+
+        @include span-columns(2);
+        @include shift(8);
+        margin: 15px 0 15px 0;
       }
-      margin:0 0 20px 0;
-      position: absolute;
-      top: 0;
-      right: 50%;
-      margin-left: calc(50%-50px);
+      // margin:0 0 20px 0;
+      // position: absolute;
+      // top: 0;
+      // right: 50%;
+      // margin-left: calc(50%-50px);
     }
 
     div#my-pet-list {
-      @include span-columns(12 of 12);
+      @include span-columns(12);
+      @include omega();
       p.pet-list-name {
         @include media($mobile-s) {
           @include span-columns(2);
@@ -92,8 +97,9 @@ div.user-profile {
 }
 
 
-div#update-pet {
+section#update-pet {
   overflow-y: auto;
+  clear:left;
 }
 
   form#add-pet-form {
